# UdemyCmake

./: .gitignore  .gitmodules
MyProject/: CMakeLists.txt
MyProject/app/: CMakeLists.txt  main.cc
MyProject/cmake/: AddGitSubmodule.cmake  Docs.cmake  LTO.cmake  Sanitizer.cmake  Warnings.cmake
MyProject/docs/: Doxyfile
MyProject/src/my_lib/: CMakeLists.txt  my_lib.cc
MyProject/tests/: CMakeLists.txt  main.cc
